--- a/app/src/main/res/layout/activity_crear_usuario.xml
+++ b/app/src/main/res/layout/activity_crear_usuario.xml
@@ -88,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/Clave"
-                android:inputType="numberPassword|textPassword" />
+                android:inputType="textPassword" />
 
         </android.support.design.widget.TextInputLayout>
 
